--- a/notebooks/data_ingestion.ipynb
+++ b/notebooks/data_ingestion.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,20 +25,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bmadushanirodrigo fracture-multi-region-x-ray-data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prefix_url = \"https://www.kaggle.com/datasets/\"\n",
     "dataset_username, dataset_id = dataset_url.split(\"/\")[4:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('bmadushanirodrigo', 'fracture-multi-region-x-ray-data')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_username, dataset_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.kaggle.com/datasets/bmadushanirodrigo/fracture-multi-region-x-ray-data/Bone_Fracture_Binary_Classification/Bone_Fracture_Binary_Classification'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix_url+dataset_username+\"/\"+dataset_id+\"/Bone_Fracture_Binary_Classification/Bone_Fracture_Binary_Classification\""
    ]
   },
   {
@@ -53,10 +85,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import kaggle\n",
+    "kaggle.api.authenticate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[, , , , , , , , , , , , , , , , , , , ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kaggle.api.dataset_list_files('navoneel/brain-mri-images-for-brain-tumor-detection').files)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,8 +244,8 @@
    "outputs": [],
    "source": [
     "class DataIngestion:\n",
-    "    def __init__(self, config: DataIngestionConfig):\n",
-    "        self.config = config\n",
+    "    # def __init__(self, config: DataIngestionConfig):\n",
+    "    #     self.config = config\n",
     "        \n",
     "    def download_file(self) -> str:\n",
     "        \"\"\"_summary_\n",
@@ -203,14 +255,15 @@
     "        \"\"\"\n",
     "        \n",
     "        try:\n",
-    "            dataset_url = self.config.source_url\n",
-    "            zip_download_dir = self.config.local_data_file\n",
+    "            dataset_url = \"https://www.kaggle.com/datasets/navoneel/brain-mri-images-for-brain-tumor-detection\"\n",
+    "            zip_download_dir = \"artifacts/data_ingestion/\"\n",
     "            os.makedirs(\"artifacts/data_ingestion\", exist_ok=True)\n",
-    "            logger.info(f\"Downloading dataset from {dataset_url} into {zip_download_dir}\")\n",
+    "            # logger.info(f\"Downloading dataset from {dataset_url} into {zip_download_dir}\")\n",
     "            \n",
-    "            user_name, dataset_id = dataset_url.split(\"/\")[4:]\n",
-    "            prefix_url = \"https://www.kaggle.com/datasets/\"\n",
-    "            od.download(prefix_url+user_name+\"/\"+dataset_id,data_dir=zip_download_dir)\n",
+    "            # user_name, dataset_id = dataset_url.split(\"/\")[4:-1]\n",
+    "            # print(f\"val content: {val}\")\n",
+    "            # prefix_url = \"https://www.kaggle.com/datasets/\"\n",
+    "            od.download(dataset_url,data_dir=zip_download_dir)\n",
     "            \n",
     "            logger.info(f\"Finished Downloading!. Data stored at {zip_download_dir}\")\n",
     "        except Exception as e:\n",
@@ -236,21 +289,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-30 23:55:09,715: INFO: common: yaml file: config\\config.yaml loaded successfully!]\n",
-      "[2024-05-30 23:55:09,719: INFO: common: yaml file: params.yaml loaded successfully!]\n",
-      "[2024-05-30 23:55:09,727: INFO: common: created directory at: artifacts]\n",
-      "[2024-05-30 23:55:09,731: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-05-30 23:55:09,739: INFO: 242197021: Downloading dataset from https://www.kaggle.com/datasets/bmadushanirodrigo/fracture-multi-region-x-ray-data into artifacts\\data_ingestion\\data.zip]\n",
-      "Please provide your Kaggle credentials to download this dataset. Learn more: http://bit.ly/kaggle-creds\n",
-      "Your Kaggle username:Your Kaggle Key:Dataset URL: https://www.kaggle.com/datasets/bmadushanirodrigo/fracture-multi-region-x-ray-data\n",
-      "Downloading fracture-multi-region-x-ray-data.zip to artifacts\\data_ingestion\\data.zip\\fracture-multi-region-x-ray-data\n"
+      "Dataset URL: https://www.kaggle.com/datasets/navoneel/brain-mri-images-for-brain-tumor-detection\n",
+      "Downloading brain-mri-images-for-brain-tumor-detection.zip to artifacts/data_ingestion/brain-mri-images-for-brain-tumor-detection\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 481M/481M [01:30<00:00, 5.57MB/s] \n"
+      "100%|██████████| 15.1M/15.1M [00:03<00:00, 4.01MB/s]\n"
      ]
     },
     {
@@ -258,7 +305,31 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[2024-05-30 23:57:26,933: INFO: 242197021: Finished Downloading!. Data stored at artifacts\\data_ingestion\\data.zip]\n"
+      "[2024-06-13 14:46:30,042: INFO: 1686871819: Finished Downloading!. Data stored at artifacts/data_ingestion/]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_ingestion = DataIngestion()\n",
+    "data_ingestion.download_file()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-06-12 13:05:01,820: INFO: common: yaml file: config\\config.yaml loaded successfully!]\n",
+      "[2024-06-12 13:05:01,825: INFO: common: yaml file: params.yaml loaded successfully!]\n",
+      "[2024-06-12 13:05:01,826: INFO: common: created directory at: artifacts]\n",
+      "[2024-06-12 13:05:01,828: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-06-12 13:05:01,830: INFO: 3375078298: Downloading dataset from https://www.kaggle.com/datasets/bmadushanirodrigo/fracture-multi-region-x-ray-data/ into artifacts\\data_ingestion\\data.zip]\n",
+      "val content: ['bmadushanirodrigo', 'fracture-multi-region-x-ray-data']\n",
+      "[2024-06-12 13:05:01,831: INFO: 3375078298: Finished Downloading!. Data stored at artifacts\\data_ingestion\\data.zip]\n"
      ]
     }
    ],
@@ -270,6 +341,56 @@
     "    data_ingestion.download_file()\n",
     "except Exception as e:\n",
     "    raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import kaggle\n",
+    "from kaggle.api.kaggle_api_extended import KaggleApi\n",
+    "api = KaggleApi()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset URL: https://www.kaggle.com/datasets/bmadushanirodrigo/fracture-multi-region-x-ray-data/versions/\n",
+      "Downloading fracture-multi-region-x-ray-data.zip to artifacts/data_ingestion\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 481M/481M [01:20<00:00, 6.27MB/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "api.dataset_download_files(\"bmadushanirodrigo/fracture-multi-region-x-ray-data/\", path=\"artifacts/data_ingestion\", quiet=False, unzip=False)"
    ]
   },
   {
@@ -296,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
