code for web ui for prediction using gradio and code added for docker file

--- a/notebooks/zip_extract.ipynb
+++ b/notebooks/zip_extract.ipynb
@@ -21925,6 +21925,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_url = \"https://www.kaggle.com/datasets/bmadushanirodrigo/fracture-multi-region-x-ray-data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_name, datasetID = dataset_url.split(\"/\")[4:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('bmadushanirodrigo', 'fracture-multi-region-x-ray-data')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_name, datasetID"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
